--- a/app/views/product_group_events/show.html.haml
+++ b/app/views/product_group_events/show.html.haml
@@ -1,5 +1,5 @@
 =toolbar do |t|
-  -t.edit @animal_group_event
-  -t.print_entity @animal_group_event
+  -t.edit @product_group_event
+  -t.print_entity @product_group_event
 
    
