correct script-rename and species naming problem (acting variety to replace)

--- a/app/views/products/_form.html.haml
+++ b/app/views/products/_form.html.haml
@@ -1,5 +1,5 @@
 -field_set do # partie info general de l entité animal
-  -association :specy
+  -association :variety
   -input :name , :hint => "le nom de votre animal"# affiche le champ name de l entité animal avec une infos derriere
   -input :sex # affiche le champ sexe sous forme de radio avec une collection de proposition (M ou F) de l entité animal
   -input :reproductor
