work in progress on product_indicator / indicator_nature with choices / phase / process.

--- a/app/views/dashboards/production.html.haml
+++ b/app/views/dashboards/production.html.haml
@@ -10,10 +10,10 @@
     -cell :demo_pie
   -hbox do
     -cell :last_events
-    -cell :animal_pie
-    -cell :last_animals
+    -cell :product_pie
+    -cell :last_products
   -hbox do
-    -cell :animal_bar
+    -cell :product_bar
     -cell :placeholder
     -cell :example do
       %h1 Direct HTML without controller
