--- a/app/views/product_groups/_membership_fields.html.haml
+++ b/app/views/product_groups/_membership_fields.html.haml
@@ -1,7 +1,7 @@
 -# Generated automatically. Don't edit this file.
 -product_membership ||= f.object
 .nested-fields
-  =link_to_remove_association('labels.remove_passage'.t, f, :class => 'nested-remove remove-passage')
+  =link_to_remove_association('labels.remove_membership'.t, f, :class => 'nested-remove remove-membership')
   =f.input(:started_at, :wrapper_html => {:id => 'started-at-field'})
   =f.input(:stopped_at, :wrapper_html => {:id => 'stopped-at-field'})
   #product-field.control-group.selector.required
