--- a/app/views/product_natures/show.html.haml
+++ b/app/views/product_natures/show.html.haml
@@ -6,9 +6,7 @@
     =attributes_list(@product_nature) do |l|
       -l.attribute :name
       -l.attribute :price
-      -l.attribute :code
-      -l.attribute :code2
-      -l.attribute :ean13
+      -l.attribute :number
       -l.attribute :category, :url=>true
       -l.attribute :unit, :label=>:label
       -l.attribute :weight
