--- a/app/views/tools/_form.html.haml
+++ b/app/views/tools/_form.html.haml
@@ -1,10 +1,26 @@
 -field_set do # partie info general de l entité animal
-  -association :nature # affiche un menu deroulant construit par la relation group_id vers le champ name de l entité animal_group
   -input :name # affiche le champ name de l entité animal avec une infos derriere
+  -association :nature # affiche un menu deroulant construit par la relation group_id vers le champ name de l entité animal_group
+  -association :variety
+  -association :parent_place
+  -input :active, :hide => :dead_at
+  -input :external, :show => :entity
+  -input :reservoir, :show => :stock
   -input :comment, :field => :text # affiche le champ comment
   -input :picture, :multiple => true
+  =image_tag(@tool.picture.url(:thumb))
+  =custom_fields
+  -#for datum in @custom_field_data
+    =custom_field datum.custom_field.name, {:datatype => datum.custom_field.nature.to_sym, :id => "custom_field_datum_#{datum.custom_field_id}_value", :name => "custom_field_datum[#{datum.custom_field_id}][value]", :value => datum.value, :size => datum.custom_field.length_max, :options => {:include_blank => (datum.custom_field.required ? nil : '')}, :choices => datum.custom_field.choices.collect{|x| [x.name , x.id]}  }
 
--field_set(:asset) do # partie info general de l entité animal
-  -association :asset
-  -input :purchased_on
-  -input :ceded_on
+-field_set(:delay) do # partie info general de l entité animal
+  -input :born_at
+  -input :dead_at
+
+-field_set(:entity) do
+  -association :owner
+
+-field_set(:stock) do
+  -association :content_nature
+  -association :content_unit
+  -input :content_maximal_quantity
