Configure SimpleForm for Foundation and add modules management for unrolls

--- a/app/themes/tekyla/stylesheets/beehive.css.scss
+++ b/app/themes/tekyla/stylesheets/beehive.css.scss
@@ -85,6 +85,9 @@
                   text-decoration: none;
                   display: block;
                   border: $cell-border-width solid transparent;
+                  &:focus {
+                    outline: none;
+                  }
                 }
                 &.active {
                   opacity: 1;
