--- a/app/views/layouts/backend.html.haml
+++ b/app/views/layouts/backend.html.haml
@@ -13,7 +13,7 @@
   -expiration = {"timeout" => session[:expiration], "timeout-href" => renew_session_url(:user_name => current_user.user_name)} if current_user and session[:expiration].to_i>0
   %body{:data => expiration, :class => "mod-"+reverse_menus[0].to_s}
     -if request.url != backend_root_url
-      =top_tag
+      =navigation_tag
     #wrap
       %aside#side.visible=side_tag
       #main
