Fixes menus with Zurb Foundation

--- a/app/themes/tekyla/stylesheets/screen.css.scss
+++ b/app/themes/tekyla/stylesheets/screen.css.scss
@@ -253,6 +253,8 @@ $bodyFontFamily: $base-font-family;
 $baseFontSize: $fs-normal;
 $mainColor: $base-color;
 
+$topBarHeight: 32px;
+
 @import "foundation";
 // @import "foundation/functions/all";
 
