--- a/app/views/layouts/_subnavigation.html.haml
+++ b/app/views/layouts/_subnavigation.html.haml
@@ -1,8 +1,6 @@
--for item in subnavigation
-  -if with_divider 
-    %li.divider>
+-for name, item in subnavigation
   -attrs = (item.items.size > 0 ? {:class => "has-dropdown"} : {})
   %li{attrs}>
     =link_to(item.human_name, item.default_page.url_options)
     -if item.items.size > 0
-      %ul.dropdown=render(:partial => "layouts/subnavigation", :object => subitems)
+      %ul.dropdown>=render(:partial => "layouts/subnavigation", :object => item.items, :locals => {:depth => depth + 1})
